<resources>
    <string name="app_name">Fantasy Stocks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_games">Games</string>
    <string name="search">search</string>
    <string name="new_game">new_game</string>
    <string name="menu_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_register">Register</string>
    <string name="logout">Logout</string>
    <string name="add_friends">add friends</string>
    <string name="create_game">Create Games</string>
    <string name="join_games">Join Games</string>
</resources>