<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_black_18dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_games" />

        <item
            android:id="@+id/nav_joinGames"
            android:icon="@drawable/baseline_add_black_18dp"
            android:title="@string/join_games"/>

        <item
            android:id="@+id/nav_createGame"
            android:icon="@drawable/ic_launcher"
            android:title="@string/create_game"/>

    </group>
    </menu>
