<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fantasystocks1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.fantasystocks1.ui.Search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_games"
        android:name="com.example.fantasystocks1.ui.Games.GamesFragment"
        android:label="@string/menu_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/nav_joinGames"
        android:name="com.example.fantasystocks1.ui.JoinGame.joinGames"
        android:label="@string/join_games"
        tools:layout="@layout/fragment_join_games"/>

    <fragment
        android:id="@+id/nav_createGame"
        android:name="com.example.fantasystocks1.ui.createGame.createGame"
        android:label="@string/create_game"
        tools:layout="@layout/fragment_create_game"/>

</navigation>